# fighting

art/: Cargo.toml
art/src/: lib.rs
components/: Cargo.toml
components/src/: lib.rs  player_part.rs  render_data.rs  transform.rs
core/: Cargo.toml
core/src/: event_clump.rs  game.rs  handle_events.rs  lib.rs
event_core/src/: two_way_channel.rs
events/: Cargo.toml
events/src/: control_x_player.rs  lib.rs  main_x_control.rs
game/: Cargo.toml
game/src/: main.rs  player_system.rs
graphics/src/: pipeline.rs
systems/: Cargo.toml
systems/src/: control.rs  lib.rs  player.rs  render.rs
