[package]
name = "game"
version = "0.1.0"
authors = ["yelikdev@gmail.com <Kiley Owen>"]

[dependencies]
log = "0.3.6"
env_logger = "0.3.5"
cgmath = "0.12.0"
find_folder = "0.3.0"
specs = "0.7.0"

art = { path="../art" }
core = { path="../core" }
utils = { path="../utils" }
components = { path="../components" }
graphics = { path="../graphics" }
event_core = { path="../event_core" }
systems = { path="../systems" }
events = { path="../events" }

[features]
g_glutin = ["core/g_glutin"]
g_sdl2 = ["core/g_sdl2"]

default = ["g_glutin"]
