[package]
name = "systems"
version = "0.1.0"
authors = ["Kiley Owen <yelikdev@gmail.com>"]

[dependencies]
log = "0.3.6"
find_folder = "0.3.0"
specs = "0.7.0"
gfx = "0.12.1"
cgmath = "0.12.0"
graphics = { path="../graphics" }
components = { path="../components" }
event_core = { path="../event_core" }
events = { path="../events" }
utils = { path="../utils" }

[features]
g_glutin = ["graphics/g_glutin", "events/g_glutin"]
g_sdl2 = ["graphics/g_sdl2", "events/g_sdl2"]
